--- a/civic_voice_frontend/.env.example
+++ b/civic_voice_frontend/.env.example
@@ -1,2 +1,5 @@
-VITE_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
+# API Configuration
 VITE_API_URL=http://localhost:8000
+
+# Clerk Authentication
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_your_clerk_publishable_key_here
